package com.spotifycloning.demo.models.entities;

public class Playlist {
}
